assets/css/style.css
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

li {
    display: inline;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

h1  {
    background-color: #4aaaa5;
    color: #ffffff;
    font-family: 'Georgia', Times, Times New Roman, serif;
}

html    {
    height: 100%;
    margin: 0;
}

body  {
    background-color: lightgrey;
    height: 100%;
    margin: 0;
    padding: 0;
    position: relative;
}  

.nav {
    background-color: #ffffff;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 960px;
    position: absolute;
    left: 25%;
    right: 25%;
}

header {
    background-color: #ffffff;
    border-bottom: 2px solid #cccccc;
    position: absolute;
    right: 0;
    left: 0;
}

hr  {
    margin-left: 2%;
    margin-right: 2%;
    border-top: 1px solid #cccccc;
}

.about {
    background-color: #ffffff;
    margin-top: 5%;
    margin-bottom: 5%;
    padding-bottom: 2%;
    width: 960px;
    position: absolute;
    left: 25%;
    right: 25%;
}

.contact-form {
    background-color: #ffffff;
    margin-top: 5%;
    margin-bottom: 5%;
    padding-bottom: 2%;
    width: 960px;
    position: absolute;
    left: 25%;
    right: 25%;
}

.portfolioList  {
    background-color: #ffffff;
    margin-top: 5%;
    margin-bottom: 5%;
    padding-bottom: 2%;
    width: 960px;
    position: absolute;
    left: 25%;
    right: 25%;
}

h2  {
    margin-left: 2%;
    color: #4aaaa5;
    font-family: 'Georgia', Times, Times New Roman, serif;
}

p   {
    margin-left: 2%;
    margin-right: 2%;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: 7000;
    line-height: 1.6;
    color: #777777;

}

img {
    float:left;
    margin-right: 10px;
}

.wrapper    {
    min-height: 100%;
    margin-bottom: -50px;
}

footer {
    background-color:#666666;
    border-top: 6px solid #4aaaa5;
    height: 50px;
}

.push   {
    height: 50px;
}

.copyright {
    text-align: center;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    color: #cccccc;
    font-size: .5em;
}

a {
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: 600;
    color: #cccccc;
    text-decoration: none;
}

form {
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: 600;
    color: grey;
    margin-left: 2%;
    margin-right: 2%;
    line-height: 1.6;
}

.contactInfo {
    width: 100%;
}

